recolored cards & redesigned/fixed sizing on mobile 1/3/21

--- a/public/resources/loadingTransition.css
+++ b/public/resources/loadingTransition.css
@@ -1,17 +1,3 @@
-.span-12 {
-    grid-column: span 12;
-}
-
-.span-6 {
-    grid-column: span 6;
-}
-
-@media only screen and (max-width: 1220px) {
-    .span-6 {
-        grid-column: span 12;
-    }
-}
-
 .fadeToNone {
     animation: fadeToNone;
     animation-duration: 4s;
@@ -35,7 +21,7 @@
 }
 
 /* Fade in homepage elements */
-.stars, .twinkling, .footer, .page-header {
+.stars, .twinkling, footer, .page-header {
     animation: fadeInSky;
     animation-duration: 2s;
 }
@@ -71,7 +57,7 @@ footer {
     z-index: 3;
     text-align:center;
 
-    min-width: 365px;
+    min-width: 390px;
 } 
 
 .page-header {
@@ -82,7 +68,7 @@ footer {
     top: 0;
     z-index: 3;
 
-    min-width: 365px;
+    min-width: 390px;
 }
 
 .page-header a, footer a {
@@ -215,7 +201,7 @@ div section {
     display: block;
     position: relative;
 
-    width: 40%;
+    width: 35%;
 
     margin-left: auto;
     margin-right: auto;
@@ -233,24 +219,31 @@ div section {
 .projects-card {
     border-radius: 10px;
 
-    background: rgb(255,46,0);
-    background: linear-gradient(31deg, rgba(255,46,0,1) 0%, rgba(80,0,0,1) 100%);
+    background: #4857ba;
+    background: linear-gradient(to top, #96ace6,#4857ba);
 
     box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
     transition: 0.3s;
-
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .projects-card p header {
-    padding-top: 30px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    background: rgba(0, 0, 0, .2);
+
     font-size: 45.24px;
     font-weight: 700;
     font-family: sans-serif;
 }
 
 .projects-card p div {
+    background: rgba(0, 0, 0, .1);
     padding-bottom: 30px;
     padding-left: 20px;
     font-size: 30.16px;
@@ -260,24 +253,31 @@ div section {
 
 .skills-interests-card {
     border-radius: 10px;
-    background: rgb(252, 254, 255);
-    background: linear-gradient(31deg, rgb(0, 255, 21) 0%, rgb(255, 217, 0) 100%);
+    background: rgb(72,87,186);
+    background: linear-gradient(to top, rgba(194,125,207,1), rgba(72,87,186,1));
 
     box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
     transition: 0.3s;
-
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .skills-interests-card p header {
-    padding-top: 30px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    background: rgba(0, 0, 0, .2);
+    
     font-size: 45.24px;
     font-weight: 700;
     font-family: sans-serif;
 }
 
 .skills-interests-card p div {
+    background: rgba(0, 0, 0, .1);
     padding-bottom: 30px;
     padding-left: 20px;
     font-size: 30.16px;
@@ -285,45 +285,33 @@ div section {
     font-family: Helvetica, sans-serif;
 }
 
-.bimodular-row {
-    display: flex;
-}
-
-.bimodular-row > div {
-}
-
-.bimodular-card1 {
-    width: 50%;
-    margin-left: 0;
-    margin-right: auto;
-}
-
-.bimodular-card2 {
-    width: 50%;
-    margin-right: 0;
-    margin-left: auto;
-}
-
 .education-card {
     border-radius: 10px;
-    background: rgb(194,35,0);
-    background: linear-gradient(31deg, rgba(194,35,0,1) 0%, rgba(85,0,181,1) 100%);
+    background: rgb(255,160,72);
+    background: linear-gradient(0deg, rgba(255,160,72,1) 0%, rgba(194,125,207,1) 100%);
 
     box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
     transition: 0.3s;
-
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .education-card p header {
-    padding-top: 30px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    background: rgba(0, 0, 0, .2);
+
     font-size: 45.24px;
     font-weight: 700;
     font-family: sans-serif;
 }
 
 .education-card p div {
+    background: rgba(0, 0, 0, .1);
     padding-bottom: 30px;
     padding-left: 20px;
     font-size: 30.16px;
@@ -333,27 +321,84 @@ div section {
 
 .achievements-awards-card {
     border-radius: 10px;
-    background: rgb(85,0,181);
-    background: linear-gradient(31deg, rgba(85,0,181,1) 0%, rgba(194,35,0,1) 100%);
+    background: rgb(245,255,0);
+    background: linear-gradient(0deg, rgba(245,255,0,1) 0%, rgba(255,123,0,1) 100%);
 
     box-shadow: 0 0 10px 0 rgba(255, 255, 255, 0.2);
     transition: 0.3s;
-
-    padding-left: 20px;
-    padding-right: 20px;
 }
 
 .achievements-awards-card p header {
-    padding-top: 30px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    background: rgba(0, 0, 0, .2);
+
     font-size: 45.24px;
     font-weight: 700;
     font-family: sans-serif;
 }
 
 .achievements-awards-card p div {
+    background: rgba(0, 0, 0, .1);
     padding-bottom: 30px;
     padding-left: 20px;
     font-size: 30.16px;
     font-weight: 400;
     font-family: Helvetica, sans-serif;
+}
+
+.span-12 {
+    grid-column: span 12;
+}
+
+.span-6 {
+    grid-column: span 6;
+}
+
+@media only screen and (max-width: 1220px) {
+    .span-6 {
+        grid-column: span 12;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .grid {
+        padding: 0;
+        padding-top: 24px;
+    }
+
+    .about-me-card, .skills-interests-card, .projects-card, .education-card, .achievements-awards-card {
+        min-width: unset;
+        width: 80vw;
+    }
+
+    .about-me-card p header, .skills-interests-card p header, .projects-card p header, .education-card p header, .achievements-awards-card p header {
+        font-size: 10vw;
+    }
+
+    
+    .about-me-card p div {
+        font-size: 4.5vw;
+    }
+
+    .about-me-card div img {
+        width: 70%;
+    }
+
+    .page-header div a img, .page-header div a h1, footer a img {
+        font-size: 24px;
+        width: 3vh;
+        height: auto;
+    }
+
+    .page-header, footer {
+        min-width: 270px;
+        width: 100%;
+    }
 }
